Dibuat menggunakan Colaboratory

--- a/belajar_coding_pt_1.ipynb
+++ b/belajar_coding_pt_1.ipynb
@@ -4,7 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4T345OOMl91kjyj9+j4tO",
+      "collapsed_sections": [
+        "NoY0QV3wlKer",
+        "sU-QMKq0nNUg",
+        "ArOMYBzmoHBq"
+      ],
+      "authorship_tag": "ABX9TyMrHfuRHoEjhyfizwGBlbql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,14 +48,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "6Sl1QzIu3Igu"
+        "id": "6Sl1QzIu3Igu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "595d78d9-4be0-4a82-c647-8bc863c7f078"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 20)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "a = 10\n",
-        "b = 20"
+        "b = 20\n",
+        "a,b"
       ]
     },
     {
@@ -81,7 +102,7 @@
       "metadata": {
         "id": "m1yVTxBN8V8W"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -90,22 +111,10 @@
         "print(b)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "y_-xeWvU8ajd",
-        "outputId": "17ac8043-3737-425b-95ac-fd869d132deb"
+        "id": "y_-xeWvU8ajd"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -126,17 +135,32 @@
     {
       "cell_type": "code",
       "source": [
+        "# 1-10\n",
+        "data = [1,2,3,4,5]\n",
+        "data"
+      ],
+      "metadata": {
+        "id": "FCcjHJNvY_7j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "a = 10\n",
         "b = 2.0\n",
         "c = \"belajar coding\"\n",
         "d = [\"test\",1]\n",
+        "\n",
         "e = {\"a\" : \"coding\", \"b\": 1}\n",
+        "\n",
         "f = True"
       ],
       "metadata": {
         "id": "oLPJXCbm8s7u"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -150,27 +174,10 @@
         "print (type(f))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yawj26Qr9CgS",
-        "outputId": "590bd694-c50d-4fcc-87c6-da9da51c4683"
+        "id": "yawj26Qr9CgS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'int'>\n",
-            "<class 'float'>\n",
-            "<class 'str'>\n",
-            "<class 'list'>\n",
-            "<class 'dict'>\n",
-            "<class 'bool'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -210,7 +217,7 @@
       "metadata": {
         "id": "QJTD6Gva_QXU"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -232,26 +239,10 @@
         "    print(i[\"price\"])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HdTSDWkK_vDj",
-        "outputId": "d9fa29d6-67e3-4284-9122-ae66c26af554"
+        "id": "HdTSDWkK_vDj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "candy\n",
-            "chocolate\n",
-            "********************\n",
-            "1\n",
-            "2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -273,23 +264,10 @@
         "print (type(x))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OelMD0aJskr4",
-        "outputId": "bece0f93-bbf4-487d-8db7-1a9f99c88270"
+        "id": "OelMD0aJskr4"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'int'>\n",
-            "<class 'str'>\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -319,6 +297,21 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "z = True\n",
+        "if z:\n",
+        "  print(\"benar\")\n",
+        "else:\n",
+        "  print('salah')"
+      ],
+      "metadata": {
+        "id": "r8xJCd2Qay_H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## looping & pengkondisian\n",
@@ -340,7 +333,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "print(\"looping berjalan\")\n",
         "\n",
         "for i in range (1,11):\n",
@@ -376,10 +368,10 @@
       "source": [
         "index = 1\n",
         "while True:\n",
-        "      if index > 10:\n",
-        "         break\n",
-        "      print (f\"looping ke - {index}\")\n",
-        "      index = index + 1"
+        "    if index > 100000000000000000000:\n",
+        "        break\n",
+        "    print (f\"looping ke - {index}\")\n",
+        "    index = index + 1"
       ],
       "metadata": {
         "id": "vNDc1RdWD0DC"
@@ -410,7 +402,6 @@
         "     {\n",
         "       \n",
         "        ini blok kode function\n",
-        "    \n",
         "     }\n",
         "    \n",
         "    jika menulisnya di luar dari blok kode maka kodenya akan di anggap bukan bagian dari blok tsb\n",
@@ -460,13 +451,26 @@
       "source": [
         "def sayHello():\n",
         "    print(\"hello\")\n",
+        "\n",
         "sayHello()"
       ],
       "metadata": {
-        "id": "tI0KS_T3ly8V"
+        "id": "tI0KS_T3ly8V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9adc896-38f9-4804-fab4-fc5c86f58ca8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,13 +489,25 @@
         "def whoAmI(name):\n",
         "    print(name)\n",
         "\n",
-        "whoAmI(\"Udin\")"
+        "whoAmI(\"Udin\")\n"
       ],
       "metadata": {
-        "id": "z4x4vkhEnLHr"
+        "id": "z4x4vkhEnLHr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a60faeb-1831-4f5e-f7e8-f496989a7a8d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Udin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -513,7 +529,7 @@
       "metadata": {
         "id": "qA6-xdBmoZZX"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -526,10 +542,25 @@
         "flashSaleProducts"
       ],
       "metadata": {
-        "id": "oQeNHyhbpU39"
+        "id": "oQeNHyhbpU39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f382113a-7aa7-4df9-bce7-cd46d7ef5f26"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'name': 'pomade', 'price': 5}, {'name': 'ferrari', 'price': 2000}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -546,28 +577,133 @@
       "metadata": {
         "id": "TUjT2Cg-quOH"
       },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = setFlashSale()\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "gTzZKfrrrBxZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "402f5c9b-e5d8-4acc-ab73-d3e2e78f5a45"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'name': 'pomade', 'price': 3}, {'name': 'ferrari', 'price': 1998}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Pertanyaan\n",
+        "\n",
+        "1. Python Bisa Pake Callback ga\n",
+        "2. def hello(name):\n",
+        "    sayTo(\"name\"):\n",
+        "  def hello(name):\n",
+        "    sayTo(name)\n",
+        "3. kegunaan def\n",
+        "4. kak , kalau make bahasa python bisa dipake buat bikin website ga ?\n",
+        "  framework: flask,django,fastAPI"
+      ],
+      "metadata": {
+        "id": "yYw5DOq2vKmb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1\n",
+        "\n",
+        "def sayTo(name):\n",
+        "    print(name)\n",
+        "\n",
+        "def hello(name):\n",
+        "    sayTo(name)\n",
+        "\n",
+        "sayTo(\"Hilman\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8oL_5aaueVni",
+        "outputId": "05263e8f-6846-406c-f7c8-9090a7140494"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hilman\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1.1\n",
+        "# tidak bisa di python\n",
+        "def animal(mentionName):\n",
+        "    return mentionName()\n",
+        "\n",
+        "#1.1 JS\n",
+        "#function animal(callback) {\n",
+        "#    callback(\"hello\")\n",
+        "#}"
+      ],
+      "metadata": {
+        "id": "P0CExbMzej7w"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2\n",
+        "# function 1\n",
+        "def hello(name):\n",
+        "    sayTo(name)\n",
+        "# function 2\n",
+        "def sayTo(name):\n",
+        "    print(name)\n",
+        "\n",
+        "sayTo(\"stefanus\")"
+      ],
+      "metadata": {
+        "id": "WJ6QjIACgEXW"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "setFlashSale()"
+        "#3 \n",
+        "# untuk mendefinisikan / menginisialisasi sebuah function\n",
+        "def hello():\n",
+        "    print(\"hello world\")"
       ],
       "metadata": {
-        "id": "gTzZKfrrrBxZ"
+        "id": "-H1sCP8DgUw7"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Pertanyaan"
-      ],
-      "metadata": {
-        "id": "yYw5DOq2vKmb"
-      }
     }
   ]
 }
