Dibuat menggunakan Colaboratory

--- a/belajar_bareng_pt_2.ipynb
+++ b/belajar_bareng_pt_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfY4632pikFyz048hrqKGX",
+      "authorship_tag": "ABX9TyMICbTUPA/c6hFDChPm2ue7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,6 +87,7 @@
         "def mean(datas):\n",
         "    # rumus \n",
         "    # jumlah data / total data\n",
+        "   \n",
         "    if not type(datas) is list:\n",
         "       raise TypeError(\"data must be a list\")\n",
         "    total_data = len(datas)\n",
@@ -99,26 +100,26 @@
     {
       "cell_type": "code",
       "source": [
-        "mean([10,10,10])"
+        "mean([10,10,10,20])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SsoI_-zWjRVB",
-        "outputId": "e07ca820-4ed1-46c4-ed43-a8fd24da4bca"
+        "outputId": "4ffa95f1-407e-4c11-d8a0-40260f6e31da"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10"
+              "12"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
@@ -131,19 +132,20 @@
         "    means= mean(student_values)\n",
         "    if student_value > means:\n",
         "       return \"lulus\"\n",
+        "    \n",
         "    return \"tidak lulus\""
       ],
       "metadata": {
         "id": "4DdOT9h8k0b1"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "student_values = [80,80,50,60,70]\n",
-        "student_value = 72 #nilai mahasiswa yang baru\n",
+        "student_value = 69 #nilai mahasiswa yang baru\n",
         "\n",
         "print (f\"nilai aktual: {student_value}\")\n",
         "print(f\"rata-rata: {mean(student_values)}\")\n",
@@ -154,15 +156,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oX9x-xdcl6BB",
-        "outputId": "00276276-43ea-454a-ce42-6ececed3a00a"
+        "outputId": "04142b05-fac7-4e4a-9469-f22c3d2b46f1"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "nilai aktual: 72\n",
+            "nilai aktual: 69\n",
             "rata-rata: 68\n",
             "hasil: lulus\n"
           ]
@@ -225,12 +227,25 @@
         "        \"name\" : \"E\",\n",
         "        \"nim\" : \"1235\"\n",
         "    },\n",
-        "]"
+        "    {\n",
+        "        \"name\" : \"E\",\n",
+        "        \"nim\" : \"1235\"\n",
+        "    },\n",
+        "    {\n",
+        "        \"name\" : \"E\",\n",
+        "        \"nim\" : \"1235\"\n",
+        "    },\n",
+        "]\n",
+        "\n",
+        "# Looping (perulangan)\n",
+        "# <span><?= $student->name?></span>\n",
+        "\n",
+        "# SELECT name,nim FROM student;"
       ],
       "metadata": {
         "id": "n3c_R2z6myqx"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -248,22 +263,31 @@
       "metadata": {
         "id": "J7It0GnsnK1x"
       },
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "findByNIM(\"1231\")"
+        "findByNIM(\"1231\")\n",
+        "\n",
+        "# input search\n",
+        "# asdassdasdas\n",
+        "#[\n",
+        "#    {}\n",
+        "#]\n",
+        "#{}\n",
+        "\n",
+        "# SELECT name,nim FROM student where NIM = \"1231\""
       ],
       "metadata": {
         "id": "95oKGjRBoBIU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f44432f1-b1e4-413a-df8b-102d11c4b3e7"
+        "outputId": "0b96083b-d59b-43a9-d6ef-8640636ce1f0"
       },
-      "execution_count": 15,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +297,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 25
         }
       ]
     },
@@ -317,17 +341,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Live Coding (ngerjain bareng)\n",
-        "\n",
-        "1. Problem dari peserta"
-      ],
-      "metadata": {
-        "id": "NhVAk8TRorNk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "### Next Materi (Caching / Memory)\n",
         "\n",
         "tips\n",
@@ -344,12 +357,103 @@
       "cell_type": "markdown",
       "source": [
         "## pertanyaan\n",
-        "\n",
-        "1. Setelah basic lanjut gas ke data science atau development nih :V"
+        "1. oya ka mau nanya donk yg tadi misal ngelooping trs datanya ga ketemu tadi munculnya apa ya?"
       ],
       "metadata": {
         "id": "Z7pVAM0vp2hg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1.\n",
+        "ketemu = findByNIM(\"1236\")\n",
+        "\n",
+        "print(\"ketemu\" if len(ketemu) > 0 else \"tidak ketemu\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f5-QPhEXf0Ft",
+        "outputId": "946c69b4-1024-458f-a235-1a2ef3058f4b"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tidak ketemu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "22BWDifGf1iK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## studi *kasus*\n",
+        "\n",
+        "1. Cari modus \n",
+        "dari data 1,2,3,1,2,5,6,7,8,9,10,2,2\n",
+        "2. Operasi MTK, +, -, :, x"
+      ],
+      "metadata": {
+        "id": "88YHpyz6gsqJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data =[1,2,3,1,2,5,6,7,8,9,10,2,2]"
+      ],
+      "metadata": {
+        "id": "EWcMT4IgguoB"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def modus(datas):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "Aqqwds9Mg-qA"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def matematika():\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "uv650TPPhAIv"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ejj9XWZYhY3B"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
