Dibuat menggunakan Colaboratory

--- a/belajar_bareng_pt_2.ipynb
+++ b/belajar_bareng_pt_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMICbTUPA/c6hFDChPm2ue7",
+      "authorship_tag": "ABX9TyND42DFLeIWz+0tKqFCo1Rk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "SiT-KgulfraO"
       },
@@ -109,7 +109,7 @@
         "id": "SsoI_-zWjRVB",
         "outputId": "4ffa95f1-407e-4c11-d8a0-40260f6e31da"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "4DdOT9h8k0b1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "id": "oX9x-xdcl6BB",
         "outputId": "04142b05-fac7-4e4a-9469-f22c3d2b46f1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "n3c_R2z6myqx"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "J7It0GnsnK1x"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
         },
         "outputId": "0b96083b-d59b-43a9-d6ef-8640636ce1f0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +378,7 @@
         "id": "f5-QPhEXf0Ft",
         "outputId": "946c69b4-1024-458f-a235-1a2ef3058f4b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,43 +414,110 @@
     {
       "cell_type": "code",
       "source": [
-        "data =[1,2,3,1,2,5,6,7,8,9,10,2,2]"
+        "data =[1,2,3,1,2,5,6,7,8,9,10,2,2, 10 ,10 ,10, 10,10]\n"
       ],
       "metadata": {
         "id": "EWcMT4IgguoB"
       },
-      "execution_count": 35,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "from statistics import mode\n",
         "def modus(datas):\n",
-        "    pass"
+        "    return mode(datas)"
       ],
       "metadata": {
         "id": "Aqqwds9Mg-qA"
       },
-      "execution_count": 37,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def matematika():\n",
-        "    pass"
+        "modus(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BiLu7nMXlqnJ",
+        "outputId": "9f0e03d0-d083-4a92-a5df-dc97a5856ec6"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def matematika(operator, a,b):\n",
+        "    if operator is \"+\":\n",
+        "      return a  + b\n",
+        "    if operator is \"-\":\n",
+        "      return a  - b\n",
+        "    if operator is \":\":\n",
+        "      return a / b\n",
+        "    if operator is \"*\":\n",
+        "      return a * b"
       ],
       "metadata": {
         "id": "uv650TPPhAIv"
       },
-      "execution_count": 1,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#tambah\n",
+        "print(matematika(\"+\", 2, 2))\n",
+        "#kurang\n",
+        "print(matematika(\"-\", 2, 2))\n",
+        "#bagi\n",
+        "print(matematika(\":\", 2, 2))\n",
+        "#kali\n",
+        "print(matematika(\"*\", 2, 2))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H4BNaafDjoMM",
+        "outputId": "7a4d5bf0-983d-4528-cf01-91c9b65f117a"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "0\n",
+            "1.0\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ejj9XWZYhY3B"
+        "id": "p9ZLw2GOj4_V"
       },
       "execution_count": null,
       "outputs": []
